--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "ai-travel-planner",
+  "name": "awesome-travel-planner",
   "version": "1.0.0",
   "type": "module",
   "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
     "react-beautiful-dnd": "13.1.1"
   },
   "overrides": {
