--- a/package.json
+++ b/package.json
@@ -2,10 +2,22 @@
   "name": "awesome-travel-planner",
   "version": "1.0.0",
   "type": "module",
+  "scripts": {
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
+  },
   "dependencies": {
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-beautiful-dnd": "13.1.1"
+    "@hello-pangea/dnd": "^16.3.0"
+  },
+  "devDependencies": {
+    "@types/react": "^18.2.0",
+    "@types/react-dom": "^18.2.0",
+    "@vitejs/plugin-react": "^4.2.0",
+    "typescript": "^5.2.0",
+    "vite": "^5.0.0"
   },
   "overrides": {
     "react": "18.2.0",
